src/objects/MTM_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>MTM Alerts</relationshipLabel>
        <relationshipName>MTM_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Type__c</fullName>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TO</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Sarto</fullName>
                </value>
                <value>
                    <fullName>DIBA</fullName>
                </value>
                <value>
                    <fullName>Produzione</fullName>
                </value>
                <value>
                    <fullName>Referente Area</fullName>
                </value>
                <value>
                    <fullName>Referente Buying</fullName>
                </value>
                <value>
                    <fullName>Referente Commerciale</fullName>
                </value>
                <value>
                    <fullName>Referente MTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.2</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.2</fullName>
                </value>
                <value>
                    <fullName>2.3</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MTM Alert</label>
    <nameField>
        <displayFormat>Alert-{0000}</displayFormat>
        <label>MTM Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTM Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>